--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="contact">
         <h2>Contact Us</h2>
         <!-- Embed Google Form here -->
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdCRny5oVxENvOviQyt8OhQRu0s57nIqmg4KixVEq489_3MIQ/viewform?embedded=true" width="640" height="674" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdCRny5oVxENvOviQyt8OhQRu0s57nIqmg4KixVEq489_3MIQ/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </section>
     
     <footer>
