--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <input type="text" id="name" name="name" required>
             
             <label for="email">Email:</label>
-            <input type="email" id="email" name="_replyto" required>
+            <input type="email" id="email" name="email" required>
             
             <label for="message">Custom Request:</label>
             <textarea id="message" name="message" required></textarea>
