--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="contact">
         <h2>Contact Us</h2>
         <!-- Formspree Form -->
-        <form action="https://formspree.io/f/xxxxxxx" method="POST">
+        <form action="https://formspree.io/f/xzzpppwk" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             
