--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <h2>Gallery</h2>
         <div class="gallery-container">
             <div class="gallery-item">
-                <img src="car1.jpg" alt="RC Car 1">
-                <p>Description of RC Car 1</p>
+                <img src="https://github.com/Danielcxurena/Jose-s-RC-Cars/blob/main/302092764_10160647026044684_1325019668249462331_n_1080x.jpg" alt="1959 Chevrolet Impala - Classic Edition">
+                <p>estimated cost around $559.99</p>
             </div>
             <div class="gallery-item">
-                <img src="car2.jpg" alt="RC Car 2">
-                <p>Description of RC Car 2</p>
+                <img src="https://github.com/Danielcxurena/Jose-s-RC-Cars/blob/main/MC_P_S6_940x.jpg" alt="1979 Chevrolet Monte Carlo">
+                <p>estimated cost around $559.99</p>
             </div>
         </div>
     </section>
