--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> JM's Custom RC Cars</title>
+    <title>Custom RC Cars</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
 </head>
@@ -30,12 +30,12 @@
         <h2>Gallery</h2>
         <div class="gallery-container">
             <div class="gallery-item">
-                <img src="https://github.com/Danielcxurena/Jose-s-RC-Cars/blob/main/302092764_10160647026044684_1325019668249462331_n_1080x.jpg" alt="1959 Chevrolet Impala - Classic Edition">
-                <p>estimated cost around $559.99</p>
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/302092764_10160640720644684_1352191668249462331_n_1080x.jpg" alt="1959 Chevrolet Impala - Classic Edition">
+                <p>1959 Chevrolet Impala - Classic Edition<br>estimated cost around $559.99</p>
             </div>
             <div class="gallery-item">
-                <img src="https://github.com/Danielcxurena/Jose-s-RC-Cars/blob/main/MC_P_S6_940x.jpg" alt="1979 Chevrolet Monte Carlo">
-                <p>estimated cost around $559.99</p>
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/MC_P_S6_940x.jpg" alt="1979 Chevrolet Monte Carlo">
+                <p>1979 Chevrolet Monte Carlo<br>estimated cost around $559.99</p>
             </div>
         </div>
     </section>
