--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>Gallery</h2>
         <div class="gallery-container">
             <div class="gallery-item">
-                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/302092764_10160640720644684_1352191668249462331_n_1080x.jpg" alt="1959 Chevrolet Impala - Classic Edition">
+                <img src="https://github.com/Danielcxurena/Jose-s-RC-Cars/blob/main/302092764_10160647026044684_1325019668249462331_n_1080x.jpg" alt="1959 Chevrolet Impala - Classic Edition">
                 <p>1959 Chevrolet Impala - Classic Edition<br>estimated cost around $559.99</p>
             </div>
             <div class="gallery-item">
