--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <div class="gallery-container">
             <div class="gallery-item">
                 <img src="https://github.com/Danielcxurena/Jose-s-RC-Cars/blob/main/302092764_10160647026044684_1325019668249462331_n_1080x.jpg" alt="1959 Chevrolet Impala - Classic Edition">
-                <p>1959 Chevrolet Impala - Classic Edition<br>estimated cost around $559.99</p>
+                <p>1959 Chevrolet Impala - Classic Edition<br>Estimated cost around $559.99</p>
             </div>
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/MC_P_S6_940x.jpg" alt="1979 Chevrolet Monte Carlo">
-                <p>1979 Chevrolet Monte Carlo<br>estimated cost around $559.99</p>
+                <p>1979 Chevrolet Monte Carlo<br>Estimated cost around $559.99</p>
             </div>
         </div>
     </section>
