--- a/index.html
+++ b/index.html
@@ -67,12 +67,4 @@
             <label for="message">Custom Request:</label>
             <textarea id="message" name="message" required></textarea>
             
-            <button type="submit">Submit</button>
-        </form>
-    </section>
-    
-    <footer>
-        <p>&copy; 2024 J.M.'s Custom RC Cars</p>
-    </footer>
-</body>
-</html>
+            <button type="submit">Submit
