--- a/index.html
+++ b/index.html
@@ -67,4 +67,12 @@
             <label for="message">Custom Request:</label>
             <textarea id="message" name="message" required></textarea>
             
-            <button type="submit">Submit
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+    
+    <footer>
+        <p>&copy; 2024 J.M.'s Custom RC Cars</p>
+    </footer>
+</body>
+</html>
