--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
     <section id="about">
         <h2>About Us</h2>
         <p>Information about your company, your process, and your team.</p>
+        <div class="social-media">
+            <h3>Follow Us</h3>
+            <a href="https://www.facebook.com/profile.php?id=100042158983002&mibextid=ZbWKwL" target="_blank">
+                <img src="path_to_your_facebook_logo" alt="Facebook">
+            </a>
+            <a href="https://www.instagram.com/silvascustomrcs?igsh=Zmh3ZHZzcW1lMG91" target="_blank">
+                <img src="path_to_your_instagram_logo" alt="Instagram">
+            </a>
+            <a href="https://www.tiktok.com/@silvascustomrcs?_t=8nhPVBsaixG&_r=1" target="_blank">
+                <img src="path_to_your_tiktok_logo" alt="TikTok">
+            </a>
+        </div>
     </section>
 
     <section id="contact">
