--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Silva's Custom RCs</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
@@ -53,13 +54,13 @@
         <div class="social-media">
             <h3>Follow Us</h3>
             <a href="https://www.facebook.com/profile.php?id=100042158983002&mibextid=ZbWKwL" target="_blank">
-                <img src="path_to_your_facebook_logo" alt="Facebook">
+                <i class="fab fa-facebook fa-2x"></i>
             </a>
             <a href="https://www.instagram.com/silvascustomrcs?igsh=Zmh3ZHZzcW1lMG91" target="_blank">
-                <img src="path_to_your_instagram_logo" alt="Instagram">
+                <i class="fab fa-instagram fa-2x"></i>
             </a>
             <a href="https://www.tiktok.com/@silvascustomrcs?_t=8nhPVBsaixG&_r=1" target="_blank">
-                <img src="path_to_your_tiktok_logo" alt="TikTok">
+                <i class="fab fa-tiktok fa-2x"></i>
             </a>
         </div>
     </section>
