--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Silva's Custom RCs specializes in creating custom RC cars tailored to your specific needs and preferences. Explore our gallery to see some of our latest creations, and get in touch with us to discuss your custom RC car project.">
+    <meta name="keywords" content="custom RC cars, RC cars, Silva's Custom RCs, RC car gallery, custom RC projects">
+    <meta name="author" content="Silva's Custom RCs">
     <title>Silva's Custom RCs</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
