--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <h2>Gallery</h2>
         <div class="gallery-container">
             <div class="gallery-item">
-                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/302092764_10160647026044684_1325019668249462331_n_1080x.jpg" alt="1959 Chevrolet Impala - Classic Edition">
+                <img src="302092764_10160647026044684_1325019668249462331_n_1080x.webp" alt="1959 Chevrolet Impala - Classic Edition">
                 <p class="model-name">1959 Chevrolet Impala - Classic Edition</p>
                 <p>Estimated cost around <span class="price">$559.99</span></p>
             </div>
             <div class="gallery-item">
-                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/MC_P_S6_940x.jpg" alt="1979 Chevrolet Monte Carlo">
+                <img src="MC_P_S6_940x.webp" alt="1979 Chevrolet Monte Carlo">
                 <p class="model-name">1979 Chevrolet Monte Carlo</p>
                 <p>Estimated cost around <span class="price">$559.99</span></p>
             </div>
