--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,7 @@
     <meta name="description" content="Silva's Custom RCs specializes in creating custom RC cars tailored to your specific needs and preferences. Explore our gallery to see some of our latest creations, and get in touch with us to discuss your custom RC car project.">
     <meta name="keywords" content="custom RC cars, RC cars, Silva's Custom RCs, RC car gallery, custom RC projects">
     <meta name="author" content="Silva's Custom RCs">
-    <title>Silva's Custom RCs</title>
+    <title>Silva's Custom RCs - Custom RC Cars in Fresno, CA</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
