--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Silva's Custom RCs specializes in creating custom RC cars tailored to your specific needs and preferences. Explore our gallery to see some of our latest creations, and get in touch with us to discuss your custom RC car project.">
-    <meta name="keywords" content="custom RC cars, RC cars, Silva's Custom RCs, RC car gallery, custom RC projects">
+    <meta name="keywords" content="silvas, Silvas, silvas custom rcs, Silva's Custom RCs, Silvas Custom RCs, custom rcs, Custom RCs, custom rc cars, custom RC cars, rc cars, RC cars, rc cars rc cars, custom remote control cars, rc Chevrolet, RC Monte Carlo, RC 1979 Monte Carlo, RC Chevrolet Monte Carlo, RC Impala, RC 1959 Impala, RC 1959 Chevrolet Impala, RC Classic, Classic RCs, radio controlled cars, West Coast RCs, RC car gallery, RC car modifications, RedCat RCs, Fresno custom RC cars, Fresno RCs, Fresno custom RCs, Fresno Classic Custom RCs">
     <meta name="author" content="Silva's Custom RCs">
     <title>Silva's Custom RCs - Custom RC Cars in Fresno, CA</title>
     <link rel="stylesheet" href="styles.css">
