--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Silva's Custom RCs specializes in creating custom RC cars tailored to your specific needs and preferences. Explore our gallery to see some of our latest creations, and get in touch with us to discuss your custom RC car project.">
-    <meta name="keywords" content="custom RC cars, RC cars, Silva's Custom RCs, custom remote control cars, Silvas Custom RCs, RC car modifications, Hobby Shop RC Car, Kandy chrome, RC Monte Carlo, RC Impala, Classic RCs, RC Toy Car, Custom RCs Nearby, Fresno custom RC cars">
+    <meta name="keywords" content="custom RC cars, RC cars, Silva's Custom RCs, custom remote control cars, RC car modifications, RC car customization, hobby shop RC car, Kandy chrome, RC Monte Carlo, RC Impala, classic RCs, RC toy car, custom RCs nearby, custom RC car builder, build your own remote control, Fresno custom RC cars">
     <meta name="author" content="Silva's Custom RCs">
     <title>Silva's Custom RCs - Custom RC Cars in Fresno, CA</title>
     <link rel="stylesheet" href="styles.css">
