--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Silva's Custom RCs specializes in creating custom RC cars tailored to your specific needs and preferences. Explore our gallery to see some of our latest creations, and get in touch with us to discuss your custom RC car project.">
-    <meta name="keywords" content="custom RC cars, RC cars, Silva's Custom RCs, custom remote control cars, RC car modifications, RC car customization, hobby shop RC car, Kandy chrome, RC Monte Carlo, RC Impala, classic RCs, RC toy car, rc chevrolet, custom RCs nearby, custom RC car builder, build your own remote control, Fresno California custom RC cars">
+    <meta name="description" content="Silva's Custom RCs specializes in creating custom RC cars tailored to your specific needs and preferences. Explore our gallery to see some of our latest creations, and get in touch with us to discuss your custom RC car project. Upgrade your 1/10 scale lowrider game with a custom-made interior or custom airbrushed paint job. Let us bring your creative thoughts and ideas to life!">
+    <meta name="keywords" content="custom RC cars, RC cars, Silva's Custom RCs, silvascustomrcs, custom remote control cars, RC car modifications, RC car customization, hobby shop RC car, Kandynchrome, RC Monte Carlo, RC Impala, classic RCs, RC toy car, rc chevrolet, custom RCs nearby, custom RC car builder, build your own remote control, Fresno California custom RC cars">
     <meta name="author" content="Silva's Custom RCs">
     <title>Silva's Custom RCs - Custom RC Cars in Fresno, CA</title>
     <link rel="stylesheet" href="styles.css">
@@ -28,6 +28,7 @@
     <section id="home" class="hero">
         <h2>Welcome to Silva's Custom RCs</h2>
         <p>We specialize in creating custom RC cars tailored to your specific needs and preferences. Explore our gallery to see some of our latest creations, and get in touch with us to discuss your custom RC car project.</p>
+        <p class="cta">Upgrade your 1/10 scale lowrider game with a custom-made interior or custom airbrushed paint job. Let us bring your creative thoughts and ideas to life!</p>
     </section>
     
     <section id="gallery">
