--- a/index.html
+++ b/index.html
@@ -52,22 +52,28 @@
         <p>Customer testimonials go here.</p>
     </section>
     
-    <section id="about">
-        <h2>About Us</h2>
-        <p>Information about your company, your process, and your team.</p>
-        <div class="social-media">
-            <h3>Follow Us</h3>
-            <a href="https://www.facebook.com/profile.php?id=100042158983002&mibextid=ZbWKwL">
-                <i class="fab fa-facebook fa-2x"></i>
-            </a>
-            <a href="https://www.instagram.com/silvascustomrcs?igshid=Zmh3ZHZzcWl1MG91" target="_blank">
-                <i class="fab fa-instagram fa-2x"></i>
-            </a>
-            <a href="https://www.tiktok.com/@silvascustomrcs?_t=8nhPVBsaixG&_r=1" target="_blank">
-                <i class="fab fa-tiktok fa-2x"></i>
-            </a>
-        </div>
-    </section>
+<section id="about">
+    <h2>About Us</h2>
+    <p>Welcome to Silva's Custom RCs, where passion meets precision. Based in the heart of Fresno, CA, we specialize in creating custom RC cars that are as authentic and detailed as the classic vehicles they represent. Our founder, Jose Silva, who grew up immersed in the rich culture of the Californian west coast car scene, brings his lifelong love of lowriders to every project.</p>
+    <p>At Silva's Custom RCs, we transform 1/10 scale RC cars with custom interiors crafted from styrofoam, designed to match the intricate details of iconic classics like the Chevrolet Impala and Monte Carlo. Each piece is a testament to our dedication to realism and craftsmanship.</p>
+    <p>Our custom airbrushed paint jobs are not just about color; they capture the spirit of the West Coast lowrider culture. With unique designs and a commitment to perfection, our exterior modifications ensure your RC car stands out with authenticity and style.</p>
+    <p>With years of experience, Silva works tirelessly from his home workshop, treating every car as a masterpiece. We take pride in our ability to turn imaginative concepts into tangible realities, ensuring every RC car built is a perfect blend of creativity, tradition, and precision.</p>
+    <p>Join us at Silva's Custom RCs and let us bring your creative thoughts and ideas to life. Whether you're a hobbyist, a collector, or just a fan of the culture, we have something special for you.</p>
+    <p>Follow us on social media to stay updated with our latest creations and projects.</p>
+    <div class="social-media">
+        <h3>Follow Us</h3>
+        <a href="https://www.facebook.com/profile.php?id=100042158983002&mibextid=ZbWKwL">
+            <i class="fab fa-facebook fa-2x"></i>
+        </a>
+        <a href="https://www.instagram.com/silvascustomrcs?igshid=Zmh3ZHZzcWl1MG91" target="_blank">
+            <i class="fab fa-instagram fa-2x"></i>
+        </a>
+        <a href="https://www.tiktok.com/@silvascustomrcs?_t=8nhPVBsaixG&_r=1" target="_blank">
+            <i class="fab fa-tiktok fa-2x"></i>
+        </a>
+    </div>
+</section>
+
     
     <section id="contact">
         <h2>Contact Us</h2>
