--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Silva's Custom RCs specializes in creating custom RC cars tailored to your specific needs and preferences. Explore our gallery to see some of our latest creations, and get in touch with us to discuss your custom RC car project. Upgrade your 1/10 scale lowrider game with a custom-made interior or custom airbrushed paint job. Let us bring your creative thoughts and ideas to life!">
+    <meta name="description" content="Welcome to Silva's Custom RCs, where passion meets precision. Based in Fresno, CA, we create custom RC cars with detailed interiors and airbrushed paint jobs inspired by the Californian west coast car culture. Our founder, Jose Silva, brings his lifelong love of lowriders to every project, ensuring each RC car stands out with authenticity and style.">
     <meta name="keywords" content="custom RC cars, RC cars, Silva's Custom RCs, silvascustomrcs, custom remote control cars, RC car modifications, RC car customization, hobby shop RC car, Kandynchrome, RC Monte Carlo, RC Impala, classic RCs, RC toy car, rc chevrolet, custom RCs nearby, custom RC car builder, build your own remote control, Fresno California custom RC cars">
     <meta name="author" content="Silva's Custom RCs">
     <title>Silva's Custom RCs - Custom RC Cars in Fresno, CA</title>
