--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
         <h3>Interiors</h3>
         <div class="gallery-container">
             <div class="gallery-item">
-                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240520_132554%20(1).jpg" alt="Interior of 1964 Chevrolet Impala" class="interior-image">
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240520_132554%20(1).webp" alt="Interior of 1964 Chevrolet Impala" class="interior-image">
                 <p class="model-name">1964 Chevrolet Impala - Interior</p>
                 <p>Interior designs starting at <span class="price">$200</span></p>
             </div>
         </div>
     </section>
+
     
     <section id="testimonials">
         <h2>Testimonials</h2>
@@ -127,12 +128,12 @@
         <p>&copy; 2024 Silva's Custom RCs<br>Fresno, CA, 93650</p>
     </footer>
     
-    <script>
+   <script>
         const interiorImage = document.querySelector('.interior-image');
         const images = [
-            'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240520_132554%20(1).jpg',
-            'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240520_133241%20(1).jpg',
-            'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240520_133258%20(1).jpg'
+            'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240520_132554%20(1).webp',
+            'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240520_133241%20(1).webp',
+            'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240520_133258%20(1).webp'
         ];
         let currentIndex = 0;
 
