--- a/index.html
+++ b/index.html
@@ -51,28 +51,26 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <h3>Exteriors</h3>
+        <p class="section-subtitle">- Custom airbrush bodies starting at $500</p>
         <div class="gallery-container">
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/302092764_10160647026044684_1325019668249462331_n_1080x%20.webp" alt="1959 Chevrolet Impala - Classic Edition">
                 <p class="model-name">1959 Chevrolet Impala - Classic Edition</p>
-                <p>Custom airbrush bodies starting at <span class="price">$500</span></p>
             </div>
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/MC_P_S6_940x.webp" alt="1979 Chevrolet Monte Carlo">
                 <p class="model-name">1979 Chevrolet Monte Carlo</p>
-                <p>Custom airbrush bodies starting at <span class="price">$500</span></p>
             </div>
         </div>
         <h3>Interiors</h3>
+        <p class="section-subtitle">- Interior designs starting at $200</p>
         <div class="gallery-container">
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240520_132554%20(1).webp" alt="Interior of 1964 Chevrolet Impala" class="interior-image">
                 <p class="model-name">1964 Chevrolet Impala - Interior</p>
-                <p>Interior designs starting at <span class="price">$200</span></p>
             </div>
         </div>
     </section>
-
     
     <section id="testimonials">
         <h2>Testimonials</h2>
@@ -128,7 +126,7 @@
         <p>&copy; 2024 Silva's Custom RCs<br>Fresno, CA, 93650</p>
     </footer>
     
-   <script>
+    <script>
         const interiorImage = document.querySelector('.interior-image');
         const images = [
             'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240520_132554%20(1).webp',
