--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <h3>Interiors</h3>
-        <p class="section-subtitle">- Interior designs starting at $200</p>
+        <p class="section-subtitle">- Custom interior designs starting at $200</p>
         <div class="gallery-container">
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240520_132554%20(1).webp" alt="Interior of 1964 Chevrolet Impala" class="interior-image">
