--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="gallery-container">
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/Zapata79Monte20231231_161646.webp" alt="1979 Chevrolet Monte Carlo - Atila del Sur" class="exterior-image" id="zapata79monte-1">
-                <p class="model-name">1979 Chevrolet Monte Carlo - Atila del Sur</p>
+                <p class="model-name">1959 Chevrolet Impala - Atila del Sur</p>
             </div>
         </div>
         <h3>Interiors</h3>
@@ -71,11 +71,11 @@
             </div>
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/brown64impala20240426_181232.webp" alt="1964 Chevrolet Impala - Café Gold" class="interior-image" id="brown64impala-1">
-                <p class="model-name">1964 Chevrolet Impala - Café Gold</p>
+                <p class="model-name">1979 Chevrolet Monte Carlo - Café Gold</p>
             </div>
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/blue64impala20240511_065046.webp" alt="1964 Chevrolet Impala - Blue Gold" class="interior-image" id="blue64impala-1">
-                <p class="model-name">1964 Chevrolet Impala - Aqua Gold</p>
+                <p class="model-name">1979 Chevrolet Monte Carlo - Aqua Gold</p>
             </div>
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/black64impala20240720_223631.webp" alt="1964 Chevrolet Impala - Black Gold" class="interior-image" id="black64impala-1">
