--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <h3>Exteriors</h3>
-        <p class="section-subtitle">- Custom airbrush bodies starting at $400</p>
+        <p class="section-subtitle">- Custom airbrush bodies starting at $500</p>
         <div class="gallery-container">
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/Zapata79Monte20231231_161646.webp" alt="1979 Chevrolet Monte Carlo - Atila del Sur" class="exterior-image" id="zapata79monte-1">
-                <p class="model-name">1959 Chevrolet Impala - Atila del Sur</p>
+                <p class="model-name">1979 Chevrolet Monte Carlo - Atila del Sur</p>
             </div>
         </div>
         <h3>Interiors</h3>
@@ -70,16 +70,24 @@
                 <p class="model-name">1964 Chevrolet Impala - Red Velvet Gold</p>
             </div>
             <div class="gallery-item">
-                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/brown64impala20240426_181232.webp" alt="1964 Chevrolet Impala - Café Gold" class="interior-image" id="brown64impala-1">
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/brown64impala20240426_181232.webp" alt="1979 Chevrolet Monte Carlo - Café Gold" class="interior-image" id="brown64impala-1">
                 <p class="model-name">1979 Chevrolet Monte Carlo - Café Gold</p>
             </div>
             <div class="gallery-item">
-                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/blue64impala20240511_065046.webp" alt="1964 Chevrolet Impala - Blue Gold" class="interior-image" id="blue64impala-1">
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/blue64impala20240511_065046.webp" alt="1979 Chevrolet Monte Carlo - Aqua Gold" class="interior-image" id="blue64impala-1">
                 <p class="model-name">1979 Chevrolet Monte Carlo - Aqua Gold</p>
             </div>
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/black64impala20240720_223631.webp" alt="1964 Chevrolet Impala - Black Gold" class="interior-image" id="black64impala-1">
                 <p class="model-name">1964 Chevrolet Impala - Black Gold</p>
+            </div>
+            <div class="gallery-item">
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240726_091737.webp" alt="1964 Chevrolet Impala - G.D. Black Gold" class="interior-image" id="gd-black64impala-1">
+                <p class="model-name">1964 Chevrolet Impala - G.D. Black Gold</p>
+            </div>
+            <div class="gallery-item">
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240727_090036.webp" alt="1964 Chevrolet Impala - Platinum Gold" class="interior-image" id="white64impala-1">
+                <p class="model-name">1964 Chevrolet Impala - Platinum Gold</p>
             </div>
         </div>
     </section>
@@ -168,6 +176,16 @@
                 'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/Zapata79Monte20231231_161646.webp',
                 'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/Zapata79Monte20231231_162345.webp',
                 'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/Zapata79Monte20231231_162328.webp'
+            ],
+            'gd-black64impala-1': [
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240726_091737.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240726_091450.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240726_091346.webp'
+            ],
+            'white64impala-1': [
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240727_090036.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240727_090320.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240727_090201.webp'
             ]
         };
 
