--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <h3>Exteriors</h3>
-        <p class="section-subtitle">- Custom airbrush bodies starting at $500</p>
+        <p class="section-subtitle">- Custom airbrush bodies starting at $400</p>
         <div class="gallery-container">
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/Zapata79Monte20231231_161646.webp" alt="1979 Chevrolet Monte Carlo - Atila del Sur" class="exterior-image" id="zapata79monte-1">
@@ -70,12 +70,12 @@
                 <p class="model-name">1964 Chevrolet Impala - Red Velvet Gold</p>
             </div>
             <div class="gallery-item">
-                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/brown64impala20240426_181232.webp" alt="1979 Chevrolet Monte Carlo - Café Gold" class="interior-image" id="brown64impala-1">
-                <p class="model-name">1979 Chevrolet Monte Carlo - Café Gold</p>
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/brown64impala20240426_181232.webp" alt="1964 Chevrolet Impala - Café Gold" class="interior-image" id="brown64impala-1">
+                <p class="model-name">1964 Chevrolet Impala - Café Gold</p>
             </div>
             <div class="gallery-item">
-                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/blue64impala20240511_065046.webp" alt="1979 Chevrolet Monte Carlo - Aqua Gold" class="interior-image" id="blue64impala-1">
-                <p class="model-name">1979 Chevrolet Monte Carlo - Aqua Gold</p>
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/blue64impala20240511_065046.webp" alt="1964 Chevrolet Impala - Aqua Gold" class="interior-image" id="blue64impala-1">
+                <p class="model-name">1964 Chevrolet Impala - Aqua Gold</p>
             </div>
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/black64impala20240720_223631.webp" alt="1964 Chevrolet Impala - Black Gold" class="interior-image" id="black64impala-1">
@@ -88,6 +88,26 @@
             <div class="gallery-item">
                 <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240727_090036.webp" alt="1964 Chevrolet Impala - Platinum Gold" class="interior-image" id="white64impala-1">
                 <p class="model-name">1964 Chevrolet Impala - Platinum Gold</p>
+            </div>
+            <div class="gallery-item">
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240806_123215.webp" alt="1964 Chevrolet Impala - Mirror Gold" class="interior-image" id="mirror-gold-1">
+                <p class="model-name">1964 Chevrolet Impala - Mirror Gold</p>
+            </div>
+            <div class="gallery-item">
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240815_123022.webp" alt="1964 Chevrolet Impala - Baroque Gold" class="interior-image" id="baroque-gold-1">
+                <p class="model-name">1964 Chevrolet Impala - Baroque Gold</p>
+            </div>
+            <div class="gallery-item">
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240813_151151.webp" alt="1964 Chevrolet Impala - Chevy Ivory" class="interior-image" id="chevy-ivory-1">
+                <p class="model-name">1964 Chevrolet Impala - Chevy Ivory</p>
+            </div>
+            <div class="gallery-item">
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240811_125310.webp" alt="1964 Chevrolet Impala - Regal Gold" class="interior-image" id="regal-gold-1">
+                <p class="model-name">1964 Chevrolet Impala - Regal Gold</p>
+            </div>
+            <div class="gallery-item">
+                <img src="https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240817_152027.webp" alt="1964 Chevrolet Impala - Red Velvet" class="interior-image" id="red-velvet-1">
+                <p class="model-name">1964 Chevrolet Impala - Red Velvet</p>
             </div>
         </div>
     </section>
@@ -186,56 +206,45 @@
                 'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240727_090036.webp',
                 'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240727_090320.webp',
                 'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240727_090201.webp'
+            ],
+            'mirror-gold-1': [
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240806_123215.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240806_123149.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240806_122806.webp'
+            ],
+            'baroque-gold-1': [
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240815_123022.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240815_123214.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240815_123337.webp'
+            ],
+            'chevy-ivory-1': [
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240813_151151.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240813_145738.webp'
+            ],
+            'regal-gold-1': [
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240811_125310.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240811_125503.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240811_125203.webp'
+            ],
+            'red-velvet-1': [
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240817_152027.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240817_152157.webp',
+                'https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/20240817_152419.webp'
             ]
         };
-
-        document.querySelectorAll('.interior-image, .exterior-image').forEach(img => {
-            img.addEventListener('click', function() {
-                const imgId = this.id;
-                const currentImages = interiorImages[imgId];
-                let currentIndex = currentImages.indexOf(this.src);
-                currentIndex = (currentIndex + 1) % currentImages.length;
-                this.src = currentImages[currentIndex];
+        
+        document.addEventListener('DOMContentLoaded', function() {
+            const galleryItems = document.querySelectorAll('.gallery-item');
+            galleryItems.forEach(item => {
+                item.addEventListener('click', function() {
+                    const id = this.querySelector('img').id;
+                    const images = interiorImages[id];
+                    if (images) {
+                        this.querySelector('img').src = images[(images.indexOf(this.querySelector('img').src) + 1) % images.length];
+                    }
+                });
             });
         });
-
-        window.addEventListener('scroll', function() {
-            const logoContainer = document.getElementById('logo-container');
-            const header = document.getElementById('main-header');
-            if (window.scrollY > header.offsetHeight) {
-                logoContainer.style.display = 'none';
-            } else {
-                logoContainer.style.display = 'block';
-            }
-        });
-
-        async function fetchInstagramPosts() {
-            const accessToken = 'YOUR_ACCESS_TOKEN'; // Replace with your actual Instagram Graph API access token
-            const userId = 'YOUR_USER_ID'; // Replace with your Instagram user ID
-            const url = `https://graph.instagram.com/${userId}/tags?fields=id,caption,media_url,permalink&access_token=${accessToken}`;
-
-            try {
-                const response = await fetch(url);
-                const data = await response.json();
-                const postsContainer = document.getElementById('instagram-posts');
-
-                data.data.forEach(post => {
-                    const postElement = document.createElement('div');
-                    postElement.classList.add('instagram-post');
-                    postElement.innerHTML = `
-                        <a href="${post.permalink}" target="_blank">
-                            <img src="${post.media_url}" alt="${post.caption}">
-                        </a>
-                        <p>${post.caption}</p>
-                    `;
-                    postsContainer.appendChild(postElement);
-                });
-            } catch (error) {
-                console.error('Error fetching Instagram posts:', error);
-            }
-        }
-
-        document.addEventListener('DOMContentLoaded', fetchInstagramPosts);
     </script>
 </body>
 </html>
